Adding changes as requested by Max

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -14,13 +14,14 @@ services:
   postgresdb:
     image: postgres
     volumes:
-      - ../pgdata:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
       - POSTGRES_DB=saas
       - POSTGRES_USER=dev
       - POSTGRES_PASSWORD=dev
+      - DB_HOST=postgresdb
    
     # Overrides default command so things don't shut down after the process ends.
     command: /bin/sh -c "while sleep 1000; do :; done"
