--- a/saas_app/Dockerfile
+++ b/saas_app/Dockerfile
@@ -9,22 +9,20 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
 
- WORKDIR /saas_app
-# COPY . /saas_app
+WORKDIR /saas_app
 
 # Install pip requirements
-RUN pwd
-RUN ls -la
-
 COPY requirements.txt /saas_app
 RUN python -m pip install -r /saas_app/requirements.txt
 
-WORKDIR /saas_app
 COPY . /saas_app
 
-# # Creates a non-root user with an explicit UID and adds permission to access the /saas_app folder
-# # For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
-RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /saas_app
-USER appuser
+RUN python manage.py collectstatic --noinput
 
+# Creates a non-root user with an explicit UID and adds permission to access the /saas_app folder
+# For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
+RUN adduser -u 5678 --disabled-password --gecos "" vscode && chown -R vscode /saas_app
+USER vscode
+
+# Run the application
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "saas_app.wsgi"]
