--- a/saas_app/requirements_dev.txt
+++ b/saas_app/requirements_dev.txt
@@ -10,6 +10,7 @@ cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.1.6
 django-allauth==0.52.0
+django-bootstrap-form==3.4
 exceptiongroup==1.1.0
 flake8==6.0.0
 gunicorn==20.1.0
