--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,16 +5,34 @@
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"extensions": [
-		"ms-python.python",
-		"ms-python.vscode-pylance",
-		"mtxr.sqltools",
-		"mtxr.sqltools-driver-pg",
-		"redhat.vscode-yaml",
-		"timonwong.shellcheck",
-		"hashicorp.terraform",
-		"github.copilot"
-	],
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"mtxr.sqltools",
+				"mtxr.sqltools-driver-pg",
+				"redhat.vscode-yaml",
+				"timonwong.shellcheck",
+				"hashicorp.terraform",
+				"github.copilot"
+			],
+			"settings": {
+				"sqltools.connections": [
+					{
+						"name": "Container database",
+						"driver": "PostgreSQL",
+						"previewLimit": 50,
+						"server": "db",
+						"port": 5432,
+						"database": "saas_app",
+						"username": "postgres",
+						"password": "postgres"
+					}
+				]
+			}
+		}
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/aws-cli:1": {
@@ -24,20 +42,6 @@
 			"version": "1.0.3",
 			"terragrunt": "0.31.1"
 		}
-	},
-	"settings": {
-		"sqltools.connections": [
-			{
-				"name": "Container database",
-				"driver": "PostgreSQL",
-				"previewLimit": 50,
-				"server": "db",
-				"port": 5432,
-				"database": "saas_app",
-				"username": "postgres",
-				"password": "postgres"
-			}
-		]
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
