--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,7 +62,8 @@
 		"POSTGRES_DB": "saas_app",
 		"POSTGRES_USER": "postgres",
 		"POSTGRES_PASSWORD": "postgres",
-		"DB_HOST": "postgresdb"
+		"DB_HOST": "postgresdb",
+		"DJANGO_SECRET_KEY": "foo"
 	}
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "devcontainer"
