--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,12 +42,12 @@
 			"version": "1.0.3",
 			"terragrunt": "0.31.1"
 		}
-	}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
 	// "forwardPorts": [5000, 5432],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "cd saas_app && pip install --user -r requirements.txt",
+	"postCreateCommand": "cd saas_app && sh initialize.sh"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
