Adding models for the form and the user. Added unit tests as well plus a new user app

--- a/saas_app/Makefile
+++ b/saas_app/Makefile
@@ -25,8 +25,7 @@ lint:
 	flake8 .
 
 test:
-	coverage run -m pytest -s -vv tests &&\
-	coverage report -m
+	python manage.py test
 
 lint-ci:
 	flake8 .
