--- a/.github/workflows/ci_code.yml
+++ b/.github/workflows/ci_code.yml
@@ -49,3 +49,5 @@ jobs:
       - name: Test
         working-directory: ./saas_app
         run: make test
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
