Adjustin the name of the github action

--- a/.github/workflows/ci_code.yml
+++ b/.github/workflows/ci_code.yml
@@ -10,7 +10,7 @@ env:
   TERRAGRUNT_VERSION: v0.31.1
 
 jobs:
-  tests:
+  lint-fmt-test:
     runs-on: ubuntu-latest
     services:
       postgres:
