--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -35,7 +35,7 @@ jobs:
       - name: configure aws credentials using OIDC
         uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # tag=v1.7.0
         with:
-          role-to-assume: arn:aws:iam::394954348146:role/OIDCGithubWorkflowRole
+          role-to-assume: arn:aws:iam::394954348146:role/gh_admin_role
           role-session-name: TFApply
           aws-region: ${{ env.AWS_REGION }}
 
