Adding files to create the VPC plus associated security groups

--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -28,6 +28,7 @@ jobs:
         include:
           - module: iam
           - module: hosted_zone
+          - module: network 
 
     runs-on: ubuntu-latest
     steps:
