--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -47,6 +47,6 @@ jobs:
         working-directory: terragrunt/env/staging/hosted_zone
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
       
-      - name: Apply netwrok 
+      - name: Apply network
         working-directory: terragrunt/env/staging/network
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
