Terraform VPC & security groups (#68)
* Adding files to create the VPC plus associated security groups

* Updating outputs to correct a naming mistake

* Chaning a naming convention

* Adding another skip rule

* Fixing a typo

--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -46,3 +46,7 @@ jobs:
       - name: Apply hosted_zone
         working-directory: terragrunt/env/staging/hosted_zone
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
+      
+      - name: Apply network
+        working-directory: terragrunt/env/staging/network
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
