--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -50,3 +50,7 @@ jobs:
       - name: Apply network
         working-directory: terragrunt/env/staging/network
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
+
+      - name: Apply load_balancer 
+        working-directory: terragrunt/env/staging/load_balancer
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
