--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -29,6 +29,7 @@ jobs:
           - module: iam
           - module: hosted_zone
           - module: network 
+          - module: load_balancer 
 
     runs-on: ubuntu-latest
     steps:
