Updating checkov skip files and making changes to satify checkov security requirements

--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -54,3 +54,11 @@ jobs:
       - name: Apply load_balancer 
         working-directory: terragrunt/env/staging/load_balancer
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
+      
+      - name: Apply ecr 
+        working-directory: terragrunt/env/staging/ecr
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
+      
+      - name: Apply ecs 
+        working-directory: terragrunt/env/staging/ecs
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
