--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   GITHUB_SHA: ${{ github.sha }}
-  AWS_ACCOUNT_STAGING: 394954348146 
-  REGISTRY:394954348146.dkr.ecr.ca-central-1.amazonaws.com/saas-procurement 
+  AWS_ACCOUNT: 394954348146 
+  REGISTRY: 394954348146.dkr.ecr.ca-central-1.amazonaws.com/saas-procurement 
   AWS_REGION: ca-central-1
 
 permissions:
@@ -31,7 +31,7 @@ jobs:
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # tag=v1.7.0
         with:
-          role-to-assume: arn:aws:iam::${{env.AWS_ACCOUNT_STAGING}}:role/gh_plan_role
+          role-to-assume: arn:aws:iam::${{env.AWS_ACCOUNT}}:role/gh_plan_role
           role-session-name: ECRPush
           aws-region: ${{ env.AWS_REGION }}
 
@@ -40,8 +40,8 @@ jobs:
         run: |
           docker build \
           --build-arg GIT_SHA=$GITHUB_SHA \
-          -t $REGISTRY/api:$GITHUB_SHA \
-          -t $REGISTRY/api:latest .
+          -t $REGISTRY/saas_app:$GITHUB_SHA \
+          -t $REGISTRY/saas_app:latest .
 
       - name: Login to ECR
         id: login-ecr
@@ -49,23 +49,25 @@ jobs:
 
       - name: Push image to ECR
         run: |
-          docker push $REGISTRY/api:$GITHUB_SHA
-          docker push $REGISTRY/api:latest
+          docker push $REGISTRY/saas_app:$GITHUB_SHA
+          docker push $REGISTRY/saas_app:latest
       - name: Docker generate SBOM
         uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3
         with:
-          docker_image: "${{ env.REGISTRY }}/api:${{ env.GITHUB_SHA }}"
-          dockerfile_path: "api/Dockerfile"
-          sbom_name: "api"
+          docker_image: "${{ env.REGISTRY }}/saas_app:${{ env.GITHUB_SHA }}"
+          dockerfile_path: "saas_app/Dockerfile"
+          sbom_name: "saas_app"
           token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Deploy new image
+      - name: Restart ECS
         run: |
-          aws lambda update-function-code \
-            --function-name ${{ env.FUNCTION_PREFIX }}-api \
-            --image-uri $REGISTRY/api:$GITHUB_SHA  > /dev/null 2>&1
-      - name: Logout of Amazon ECR
-        run: docker logout ${{ steps.login-ecr.outputs.registry }}
+          aws ecs update-service --cluster saas-procurement-cluster --service sre-bot-saas_procurement-service service --force-new-deployment > /dev/null 2>&1
 
-      - name: CloudFront cache invalidate
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_CLOUDFRONT_DIST_ID }} --paths "/*"
+      - name: Docker generate SBOM
+        uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3    
+        with:
+          docker_image: "${{ env.REGISTRY }}/saas_procurement:latest"
+          dockerfile_path: "saas_app/Dockerfile"
+          platform: "linux/arm64"
+          sbom_name: "saas_procurement"
+          token: "${{ secrets.GITHUB_TOKEN }}"
