Making changes to Dockerfile

--- a/saas_app/Dockerfile
+++ b/saas_app/Dockerfile
@@ -1,7 +1,8 @@
 FROM arm64v8/python:3.11.2-slim@sha256:474f1e977c7dcc3c47ee9fee5d50764763c111f7ce8a0ce2282638fdf6135919
 
 RUN  apt-get update \
-  && apt-get install -y make
+  && apt-get install -y wget \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /saas_app
 
