--- a/saas_app/Dockerfile
+++ b/saas_app/Dockerfile
@@ -1,8 +1,32 @@
-FROM arm64v8/python:3.11.2-slim@sha256:474f1e977c7dcc3c47ee9fee5d50764763c111f7ce8a0ce2282638fdf6135919
+FROM python:3.8-slim-buster@sha256:f2199258d29ec06b8bcd3ddcf93615cdc8210d18a942a56b1a488136074123f3
 
-RUN  apt-get update \
-  && apt-get install -y wget \
-  && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+    ca-certificates \
+    curl \
+    git \
+    gstreamer1.0-libav \
+    libnss3-tools \
+    libatk-bridge2.0-0 \
+    libcups2-dev \
+    libxkbcommon-x11-0 \
+    libxcomposite-dev \
+    libxrandr2 \
+    libgbm-dev \
+    libgtk-3-0 \
+    libxshmfence-dev \
+    gnupg2 \
+    postgresql-client \
+    openssh-client \
+    python3-pip \
+    unzip \
+    vim \
+    wget \
+    xz-utils \
+    zsh \
+    entr \
+    && apt-get autoremove -y \
+    && apt-get clean -y
 
 WORKDIR /saas_app
 
