--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -50,8 +50,9 @@ jobs:
 
       - name: Push image to ECR
         run: |
+          docker push $REGISTRY:$GITHUB_SHA
           docker push $REGISTRY:latest
-
+          
       - name: Docker generate SBOM
         uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3
         with:
@@ -62,7 +63,7 @@ jobs:
 
       - name: Restart ECS
         run: |
-          aws ecs update-service --cluster saas-procurement-cluster --service sre-bot-saas_procurement-service service --force-new-deployment > /dev/null 2>&1
+          aws ecs update-service --cluster saas-procurement-cluster --service saas_procurement-service --force-new-deployment > /dev/null 2>&1
 
       - name: Docker generate SBOM
         uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3    
