--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -61,10 +61,6 @@ jobs:
           sbom_name: "saas_app"
           token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Restart ECS
-        run: |
-          aws ecs update-service --cluster saas-procurement-cluster --service saas_procurement-service --force-new-deployment > /dev/null 2>&1
-
       - name: Docker generate SBOM
         uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3    
         with:
@@ -73,3 +69,6 @@ jobs:
           platform: "linux/arm64"
           sbom_name: "saas_procurement"
           token: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Logout of Amazon ECR
+        run: docker logout ${{ steps.login-ecr.outputs.registry }}
