--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -11,6 +11,7 @@ env:
   AWS_REGION: ca-central-1
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
+  TF_VAR_db_password: {{ secrets.POSTGRES_PASSWORD}}
 
 permissions:
   id-token: write
@@ -32,6 +33,7 @@ jobs:
           - module: load_balancer 
           - module: ecr 
           - module: ecs 
+          - module: rds 
 
     runs-on: ubuntu-latest
     steps:
