--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -12,7 +12,7 @@ env:
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
   AWS_REGION: ca-central-1
-  TF_VAR_db_password: {{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_db_password: ${{ secrets.POSTGRES_PASSWORD }}
 
 
 permissions:
