--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -52,13 +52,9 @@ jobs:
           docker push $REGISTRY:$GITHUB_SHA
           docker push $REGISTRY:latest
           
-      - name: Docker generate SBOM
-        uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3
-        with:
-          docker_image: "${{ env.REGISTRY }}:${{ env.GITHUB_SHA }}"
-          dockerfile_path: "saas_app/Dockerfile"
-          sbom_name: "saas_app"
-          token: "${{ secrets.GITHUB_TOKEN }}"
+ 	- name: Restart ECS
+        run: |
+          aws ecs update-service --cluster saas-procurement-ecs-cluster --service saas-procurement-service --force-new-deployment > /dev/null 2>&1
 
       - name: Docker generate SBOM
         uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3    
