--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.6.0
+aws-sns-message-validator==0.0.5
+awscli==1.27.110
+boto3==1.26.110
 Django==4.1.7
 gunicorn==20.1.0
 psycopg2-binary==2.9.5
