--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,7 +49,7 @@
 		"POSTGRES_DB": "postgres",
 		"POSTGRES_USER": "postgres",
 		"POSTGRES_PASSWORD": "postgres",
-		"ENVIRONMENT": "local"
+		"ENVIRONMENT": "dev"   // Sets local development vs production/staging 
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
