--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -13,6 +13,8 @@ env:
   TERRAGRUNT_VERSION: 0.40.2
   AWS_REGION: ca-central-1
   TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_database_username: ${{ secrets.POSTGRES_USER }}
+  TF_VAR_database_name: ${{ secrets.POSTGRES_DB }}
 
 
 permissions:
