--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -11,7 +11,9 @@ env:
   AWS_REGION: ca-central-1
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
-  TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_database_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_database_username: ${{ secrets.POSTGRES_USER }}
+  TF_VAR_database_name: ${{ secrets.POSTGRES_DB }}
 
 permissions:
   id-token: write
