Formatting terraform files

--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -15,6 +15,7 @@ env:
   TF_VAR_database_password: ${{ secrets.POSTGRES_PASSWORD }}
   TF_VAR_database_username: ${{ secrets.POSTGRES_USER }}
   TF_VAR_database_name: ${{ secrets.POSTGRES_DB }}
+  TF_VAR_saas_app_config: ${{ secrets.APP_CONFIG }}
 
 
 permissions:
