--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -12,7 +12,10 @@ env:
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
   AWS_REGION: ca-central-1
-  TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_database_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_database_username: ${{ secrets.POSTGRES_USER }}
+  TF_VAR_database_name: ${{ secrets.POSTGRES_DB }}
+  TF_VAR_saas_app_config: ${{ secrets.APP_CONFIG }}
 
 
 permissions:
