--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,6 +10,8 @@ env:
   AWS_ACCOUNT: 394954348146 
   REGISTRY: 394954348146.dkr.ecr.ca-central-1.amazonaws.com/saas-procurement
   AWS_REGION: ca-central-1
+  TF_VAR_sentinel_customer_id: ${{ secrets.LOG_ANALYTICS_WORKSPACE_ID }}
+  TF_VAR_sentinel_shared_key: ${{ secrets.LOG_ANALYTICS_WORKSPACE_KEY }}
 
 permissions:
   id-token: write
