--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -11,12 +11,36 @@ env:
   AWS_REGION: ca-central-1
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
-  TF_VAR_database_password: ${{ secrets.POSTGRES_PASSWORD }}
-  TF_VAR_database_username: ${{ secrets.POSTGRES_USER }}
-  TF_VAR_database_name: ${{ secrets.POSTGRES_DB }}
   TF_VAR_saas_app_config: ${{ secrets.APP_CONFIG }}
   TF_VAR_sentinel_customer_id: ${{ secrets.LOG_ANALYTICS_WORKSPACE_ID }}
   TF_VAR_sentinel_shared_key: ${{ secrets.LOG_ANALYTICS_WORKSPACE_KEY }}
+  TF_VAR_approved_request_template_id: ${{ secrets.APPROVED_REQUEST_TEMPLATE_ID }}
+  TF_VAR_request_s32_approved_template_id: ${{ secrets.REQUEST_S32_APPROVED_TEMPLATE_ID }}
+  TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
+  TF_VAR_postgres_user: ${{ secrets.POSTGRES_USER }}
+  TF_VAR_postgres_db: ${{ secrets.POSTGRES_DB }}
+  TF_VAR_postgres_host: ${{ secrets.POSTGRES_HOST }}
+  TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
+  TF_VAR_django_secret_key: ${{ secrets.DJANGO_SECRET_KEY }}
+  TF_VAR_approver_delete_template_id: ${{ secrets.APPROVER_DELETE_TEMPLATE_ID }}
+  TF_VAR_social_application_client_id: ${{ secrets.SOCIAL_APPLICATION_CLIENT_ID }}
+  TF_VAR_saas_submission_template_id: ${{ secrets.SAAS_SUBMISSION_TEMPLATE_ID }}
+  TF_VAR_edit_request_template_id: ${{ secrets.EDIT_REQUEST_TEMPLATE_ID }}
+  TF_VAR_delete_saas_request_template_id: ${{ secrets.DELETE_SAAS_REQUEST_TEMPLATE_ID }}
+  TF_VAR_saas_submission_edit_template_id: ${{ secrets.SAAS_SUBMISSION_EDIT_TEMPLATE_ID }}
+  TF_VAR_denied_request_template_id: ${{ secrets.DENIED_REQUEST_TEMPLATE_ID }}
+  TF_VAR_notify_api_key: ${{ secrets.NOTIFY_API_KEY }}
+  TF_VAR_notify_url: ${{ secrets.NOTIFY_URL }}
+  TF_VAR_approval_request_template_id: ${{ secrets.APPROVAL_REQUEST_TEMPLATE_ID }}
+  TF_VAR_request_s32_denied_internal_ops_template_id: ${{ secrets.REQUEST_S32_DENIED_INTERNAL_OPS_TEMPLATE_ID }}
+  TF_VAR_internal_ops_request_more_info_template_id: ${{ secrets.INTERNAL_OPS_REQUEST_MORE_INFO_TEMPLATE_ID }}
+  TF_VAR_request_s32_denied_template_id: ${{ secrets.REQUEST_S32_DENIED_TEMPLATE_ID }}
+  TF_VAR_s32_approval_requested_template_id: ${{ secrets.S32_APPROVAL_REQUESTED_TEMPLATE_ID }}
+  TF_VAR_request_s32_approved_internal_ops_template_id: ${{ secrets.REQUEST_S32_APPROVED_INTERNAL_OPS_TEMPLATE_ID }}
+  TF_VAR_requestor_s32approval_pending_review_template_id: ${{ secrets.REQUESTOR_S32APPROVAL_PENDING_REVIEW_TEMPLATE_ID }}
+  TF_VAR_social_application_secret_key: ${{ secrets.SOCIAL_APPLICATION_SECRET_KEY }}
+  TF_VAR_testing_feature_flag: ${{ secrets.TESTING_FEATURE_FLAG }}
+  TF_VAR_site_id: ${{ secrets.SITE_ID }}
 
 permissions:
   id-token: write
