Making changes to the rds variables

--- a/.github/workflows/tf_plan.yml
+++ b/.github/workflows/tf_plan.yml
@@ -19,7 +19,7 @@ env:
   TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
   TF_VAR_postgres_user: ${{ secrets.POSTGRES_USER }}
   TF_VAR_postgres_db: ${{ secrets.POSTGRES_DB }}
-  TF_VAR_postgres_host: ${{ secrets.POSTGRES_HOST }}
+  TF_VAR_db_host: ${{ secrets.DB_HOST}}
   TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
   TF_VAR_django_secret_key: ${{ secrets.DJANGO_SECRET_KEY }}
   TF_VAR_approver_delete_template_id: ${{ secrets.APPROVER_DELETE_TEMPLATE_ID }}
