--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -106,5 +106,6 @@ django-bootstrap-form==3.4
 django-crispy-forms==2.0
 crispy-bootstrap4==2022.1
 notifications-python-client==8.0.1
+pandas==2.0.3
 pytz==2022.7.1
 whitenoise==6.5.0
