--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 aws-sns-message-validator==0.0.5
+azure-identity==1.13.0
+azure-monitor-query==1.2.0
 awscli==1.28.1
 boto3==1.27.1
 Django==4.2.3
@@ -12,5 +14,5 @@ django-bootstrap-form==3.4
 django-crispy-forms==2.0
 crispy-bootstrap4==2022.1
 notifications-python-client==8.0.1
-pytz==2022.7.1
+pandas==2.0.3
 whitenoise==6.5.0
