Adding initial logic to make cron work in Django

--- a/saas_app/Dockerfile
+++ b/saas_app/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	postgresql \
 	gcc \
 	jq \
-	musl-dev
+	musl-dev \
+	cron
 
 WORKDIR /saas_app
 COPY requirements.txt /saas_app/
