--- a/.github/workflows/soci.yml
+++ b/.github/workflows/soci.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Run SOCI
         run: |
+          sudo soci image rpull $REGISTRY:8a7f65aa86c4d0297656dc5126929cced1a67508
           sudo soci create $REGISTRY:8a7f65aa86c4d0297656dc5126929cced1a67508
           
       - name: Show SOCI index
