fix: do not used shared

--- a/.github/workflows/soci.yml
+++ b/.github/workflows/soci.yml
@@ -15,11 +15,15 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    uses: cds-snc/workflows/.github/workflows/setup-soci-snapshotter.yml@main
-    
     steps:
       - name: Checkout
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+
+      - name: Install SOCI
+        working-directory: ./
+        run: |
+          wget https://github.com/awslabs/soci-snapshotter/releases/download/v0.3.0/soci-snapshotter-0.3.0-linux-amd64.tar.gz
+          sudo tar -C /usr/local/bin -xvf soci-snapshotter-0.3.0-linux-amd64.tar.gz soci
 
       - name: Configure aws credentials using OIDC
         uses: aws-actions/configure-aws-credentials@master
@@ -27,6 +31,15 @@ jobs:
           role-to-assume: arn:aws:iam::394954348146:role/gh_plan_role
           role-session-name: GitHubActions
           aws-region: "ca-central-1"
+
+      - name: Set up containerd
+        run: |
+          sudo wget https://github.com/containerd/containerd/releases/download/v1.7.2/containerd-1.7.2-linux-amd64.tar.gz
+          mkdir containerd
+          sudo tar -zxf ./containerd-1.7.2-linux-amd64.tar.gz -C ./containerd
+          sudo mv ./containerd/bin/* /usr/bin/
+          sudo wget https://github.com/opencontainers/runc/releases/download/v1.1.8/runc.amd64 -O /usr/bin/runc
+          sudo chmod +x /usr/bin/runc
 
       - name: Build image
         working-directory: ./saas_app
