--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   GITHUB_SHA: ${{ github.sha }}
-  AWS_ACCOUNT: 394954348146 
+  AWS_ACCOUNT: 394954348146
   REGISTRY: 394954348146.dkr.ecr.ca-central-1.amazonaws.com/saas-procurement
   AWS_REGION: ca-central-1
   TF_VAR_sentinel_customer_id: ${{ secrets.LOG_ANALYTICS_WORKSPACE_ID }}
@@ -21,7 +21,6 @@ permissions:
   checks: write
   statuses: write
   security-events: write
-
 
 jobs:
   build-push:
@@ -69,27 +68,23 @@ jobs:
         run: |
           sudo soci create $REGISTRY:latest
 
-      - name: Login to ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@fc3959cb4cf5a821ab7a5a636ea4f1e855b05180 # v1.6.2
-
       - name: Push image to ECR
         run: |
-          docker push $REGISTRY:$GITHUB_SHA
-          docker push $REGISTRY:latest
+          DOCKER_PASSWORD=$(aws ecr get-login-password --region ca-central-1)
+          sudo ctr i push --user AWS:$DOCKER_PASSWORD --platform linux/amd64 $REGISTRY:latest
 
       - name: Push SOCI index
         run: |
           DOCKER_PASSWORD=$(aws ecr get-login-password --region ca-central-1)
           echo "::add-mask::$DOCKER_PASSWORD"
           sudo soci push --user AWS:$DOCKER_PASSWORD $REGISTRY:latest
-          
+
       - name: Restart ECS
         run: |
           aws ecs update-service --cluster saas-procurement-cluster --service saas_procurement-service --force-new-deployment > /dev/null 2>&1
 
       - name: Docker generate SBOM
-        uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3    
+        uses: cds-snc/security-tools/.github/actions/generate-sbom@cfec0943e40dbb78cee115bbbe89dc17f07b7a0f # v2.1.3
         with:
           docker_image: "${{ env.REGISTRY }}:latest"
           dockerfile_path: "saas_app/Dockerfile"
