Adding code for the version to work in production as well

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -51,11 +51,16 @@ jobs:
           role-session-name: ECRPush
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
+
       - name: Build image
         working-directory: ./saas_app
         run: |
           docker build \
           --build-arg GIT_SHA=$GITHUB_SHA \
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} \
           -t $REGISTRY:latest .
 
       - name: Export image into CTR
