--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,9 +32,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
 
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
+
       - name: Build image
         working-directory: ./${{ matrix.image }}
         run: |
           docker build \
           --build-arg GIT_SHA=${{ github.sha }} \
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} \
           -t ${{ matrix.image }}:latest .
