--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,6 +40,7 @@ jobs:
         working-directory: ./${{ matrix.image }}
         run: |
           docker build \
-          -t ${{ matrix.image }}:latest . \
+          -t ${{ matrix.image }}:latest \
           --build-arg GIT_SHA=${{ github.sha }} \
-          --build-arg BUILD_DATE=${{ steps.date.outputs.date }}
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} 
+          --no-cache .
