--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -61,7 +61,7 @@ jobs:
           docker build \
            -t $REGISTRY:latest \
           --build-arg GIT_SHA=$GITHUB_SHA \
-          --build-arg BUILD_DATE=${{ steps.date.outputs.date }}
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} \
           --no-cache .
 
       - name: Export image into CTR
