--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,5 +42,4 @@ jobs:
           docker build \
           -t ${{ matrix.image }}:latest \
           --build-arg GIT_SHA=${{ github.sha }} \
-          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} \ 
-          --no-cache .
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} . 
