Fixing version in production/dev environments (#216)
* Adding code for the version to work in production as well

* Adding translation files plus adding UTC to the time

* Changing name of github action

* Reversing the order of the build arguments

* Adding no cache flag

* Changing the date format

* Adding a \ at the end

* Changing order

* testing if arg variables are interferring

* Removing the no cache docker build argument

* Commenting out a comment

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -51,12 +51,17 @@ jobs:
           role-session-name: ECRPush
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Get current date and time
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H:%M:%S')"
+
       - name: Build image
         working-directory: ./saas_app
         run: |
           docker build \
+           -t $REGISTRY:latest \
           --build-arg GIT_SHA=$GITHUB_SHA \
-          -t $REGISTRY:latest .
+          --build-arg BUILD_DATE=${{ steps.date.outputs.date }} . 
 
       - name: Export image into CTR
         run: |
